update in some login function

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 username = binodjoshi849
 password = OxreVmpOb6AaBeTY
 
-MONGODB_URL = mongodb+srv://binodjoshi849:OxreVmpOb6AaBeTY@nextjsblog.quv9ybz.mongodb.net/
+MONGODB_URL = mongodb+srv://binodjoshi849:OxreVmpOb6AaBeTY@nextjsblog.quv9ybz.mongodb.net/nextjsblog
 
 AUTH_SECRET = osihdofalshx
 AUTH_URL = http://localhost:3000/api/auth
